--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="">Portfolio</a></li>
         <li><a href="">Contacts</a></li>
       </ul>
-   </nav>
+   </nav> <!--notatka-->
    <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
    <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a><br>
     </header>
