--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </ul>
    </nav> <!--notatka-->
    <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-   <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a><br>
+   <a href="tel:+110001111111">+11 (000) 111-11-11</a><br>
     </header>
 
     <main>
