--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       </ul>
    </nav>
 <address>
-   <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-   <a href="tel:+110001111111">+11 (000) 111-11-11</a><br>
+<ul>
+    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+   <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+</ul>
 </address>
     </header>
 
@@ -55,30 +57,34 @@ Research and confirm brands that present the strongest digital growth opportunit
     <h2>Our Team</h2>
 <ul>
     <li>
-<img src=".//images/guerrero.jpg" alt="Mark Guerrero" 
+<img src=".//images/guerrero.jpg" 
     width="264"
-    height="260">
+    height="260"
+    alt="Mark Guerrero">
     <h3>Mark Guerrero</h3>
 <p>Product Designer</p>
    </li>
    <li>
-    <img src=".//images/ford.jpg" alt="Tom Ford" 
+    <img src=".//images/ford.jpg" 
     width="264"
-    height="260">
+    height="260"
+    alt="Tom Ford">
     <h3>Tom Ford</h3>
 <p>Frontend Developer</p>
    </li>
    <li>
-<img src=".//images/garcia.jpg" alt="Camila Garcia" 
+<img src=".//images/garcia.jpg" 
     width="264"
-    height="260">
+    height="260"
+    alt="Camila Garcia">
     <h3>Camila Garcia</h3>
 <p>Marketing</p>
    </li>
    <li>
-<img src=".//images/wilson.jpg" alt="Daniel Wilson"
+<img src=".//images/wilson.jpg"
     width="264"
-    height="260">
+    height="260"
+    alt="Daniel Wilson">
     <h3>Daniel Wilson</h3>
 <p>UI Designer</p>
    </li>
@@ -87,7 +93,7 @@ Research and confirm brands that present the strongest digital growth opportunit
     </main>
 
     <footer>
-<a href="index.html">WebStudio</a>
+<a href="./index.html">WebStudio</a>
 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
