--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
 </head>
 <body>
     
-    <header>
+<header>
 
-   <nav>
+    <nav>
     <a href="./index.html">WebStudio</a>
-      <ul>
+  <ul>
         <li><a href="">Studio</a></li>
         <li><a href="">Portfolio</a></li>
         <li><a href="">Contacts</a></li>
       </ul>
-   </nav>
-<address>
-<ul>
-    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-   <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-</ul>
-</address>
-    </header>
+    </nav>
+    <address>
+  <ul>
+     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+     <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+  </ul>
+    </address>
+</header>
 
-    <main>
-<section>
-<h1>Effective Solutions for Your Business</h1>
-<button type="button">Order Service</button>
-</section>
+ <main>
+  <section>
+     <h1>Effective Solutions for Your Business</h1>
+     <button type="button">Order Service</button>
+  </section>
 
-<section>
-
-<ul>
+  <section>
+   <h2>Section2</h2>
+ <ul>
    <li><h3>Strategy</h3>
    <p>Our goal is to identify the business
 problem to walk away with the perfect and creative solution.
@@ -51,13 +51,13 @@ Research and confirm brands that present the strongest digital growth opportunit
    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
 </li>
 </ul>
-</section>
+  </section>
 
-<section>
+  <section>
     <h2>Our Team</h2>
 <ul>
     <li>
-<img src=".//images/guerrero.jpg" 
+<img src="./images/guerrero.jpg" 
     width="264"
     height="260"
     alt="Mark Guerrero">
@@ -65,7 +65,7 @@ Research and confirm brands that present the strongest digital growth opportunit
 <p>Product Designer</p>
    </li>
    <li>
-    <img src=".//images/ford.jpg" 
+    <img src="./images/ford.jpg" 
     width="264"
     height="260"
     alt="Tom Ford">
@@ -73,7 +73,7 @@ Research and confirm brands that present the strongest digital growth opportunit
 <p>Frontend Developer</p>
    </li>
    <li>
-<img src=".//images/garcia.jpg" 
+<img src="./images/garcia.jpg" 
     width="264"
     height="260"
     alt="Camila Garcia">
@@ -81,7 +81,7 @@ Research and confirm brands that present the strongest digital growth opportunit
 <p>Marketing</p>
    </li>
    <li>
-<img src=".//images/wilson.jpg"
+<img src="./images/wilson.jpg"
     width="264"
     height="260"
     alt="Daniel Wilson">
@@ -89,12 +89,12 @@ Research and confirm brands that present the strongest digital growth opportunit
 <p>UI Designer</p>
    </li>
 </ul>
-</section>
-    </main>
+  </section>
+ </main>
 
     <footer>
-<a href="./index.html">WebStudio</a>
-<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a href="./index.html">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 
