--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
+
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -22,13 +23,16 @@
         </ul>
       </address>
     </header>
+
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <button type="button">Order Service</button>
       </section>
 
       <section>
+        <h2>section 2</h2>
+
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -63,6 +67,7 @@
 
       <section>
         <h2>Our Team</h2>
+
         <ul>
           <li>
             <img
@@ -107,6 +112,7 @@
         </ul>
       </section>
     </main>
+
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
